--- a/clock.css
+++ b/clock.css
@@ -37,7 +37,31 @@ body {
   transform: translateY(-3px); /* account for the height of the clock hands */
 }
 
-.hand {
+.secondHand {
+  width: 50%;
+  height: 3px;
+  background: black;
+  position: absolute;
+  top: 50%;
+  transform-origin: 100%;
+  transform: rotate(90deg);
+  transition: all 0.05s;
+  transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1)
+}
+
+.minuteHand {
+  width: 50%;
+  height: 6px;
+  background: black;
+  position: absolute;
+  top: 50%;
+  transform-origin: 100%;
+  transform: rotate(90deg);
+  transition: all 0.05s;
+  transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1)
+}
+
+.hourHand {
   width: 50%;
   height: 6px;
   background: black;
