--- a/clock.css
+++ b/clock.css
@@ -1,5 +1,5 @@
 html {
-  background: #018DED url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/S7FfzzQmliwca04xu/beautiful-sky-and-sea-at-dusk-background-reflections-in-the-calm-water_htbkgffkhe_thumbnail-full01.png);
+  background: #018DED url(https://i.ytimg.com/vi/_-M4oECEWbM/maxresdefault.jpg);
   background-size: cover;
   font-family: 'helvetica neue';
   text-align: center;
